Add header top styles

--- a/index.html
+++ b/index.html
@@ -19,13 +19,17 @@
     <header class="site-header">
         <div class="container">
             <div class="header-top">
-                <h2>NAMANGANLIKLAR 24</h2>
+                <h2 class="header-title">NAMANGANLIKLAR 24</h2>
                 <span>$ 10137.2</span>
                 <span>P 138.26</span>
                 <div>
-                    <img src="" alt="">
                     <p>Поиск</p>
                 </div>
+                <div class="header-language">
+                    <p class="language-uz">UZ</p>
+                    <p class="language-ru">RU</p>
+                </div>
+                <a class="btn" href="#">Войти</a>
             </div>
         </div>
     </header>
