Add nav and card styles

--- a/index.html
+++ b/index.html
@@ -20,11 +20,9 @@
         <div class="container">
             <div class="header-top">
                 <h2 class="header-title">NAMANGANLIKLAR 24</h2>
-                <span>$ 10137.2</span>
-                <span>P 138.26</span>
-                <div>
-                    <p>Поиск</p>
-                </div>
+                <span class="header-money-one">$ 10137.2</span>
+                <span class="header-money-two">P 138.26</span>
+                <p class="header-poisk">Поиск</p>
                 <div class="header-language">
                     <p class="language-uz">UZ</p>
                     <p class="language-ru">RU</p>
@@ -33,5 +31,117 @@
             </div>
         </div>
     </header>
+
+
+    <!-- Body -->
+    <nav class="body-nav">
+        <div class="container">
+            <ul class="nav-list">
+                <li class="list-item">
+                    <a class="nav-link" href="#">Главное</a>
+                </li>
+                <li class="list-item">
+                    <a class="nav-link" href="#">Интересное</a>
+                </li>
+                <li class="list-item">
+                    <a class="nav-link" href="#">Экономика</a>
+                </li>
+                <li class="list-item">
+                    <a class="nav-link" href="#">Политика</a>
+                </li>
+                <li class="list-item">
+                    <a class="nav-link" href="#">Общество</a>
+                </li>
+                <li class="list-item">
+                    <a class="nav-link" href="#">Технологии</a>
+                </li>
+                <li class="list-item">
+                    <a class="nav-link" href="#">Спорт</a>
+                </li>
+                <li class="list-item">
+                    <a class="nav-link" href="#">Культура</a>
+                </li>
+                <li class="list-item">
+                    <a class="nav-link" href="#">Происшествия</a>
+                </li>
+                <li class="list-item">
+                    <a class="nav-link" href="#">Наука</a>
+                </li>
+            </ul>
+            <hr>
+        </div>
+    </nav>
+
+
+    <!-- Main section -->
+    <main>
+        <div class="container">
+            <img class="reklama" src="img/reklama1.jpg" alt="reklama rasm" width="1200" height="128" srcset="img/reklama1.jpg 1x, img/reklama1@2x.jpg 2x">
+        </div>
+
+        <!-- News section -->
+        <div class="body-card">
+            <div class="site-container container">
+                <div class="card">
+                    <h4 class="card-heading">Кандидат на пост канцлера ФРГ Шольц назвал условия коалиционного соглашения</h4>
+                    <p class="card-text">Лидер Социал-демократической партии Германии (СДПГ) и кандидат на должность...</p>
+                    <img class="card-img" src="img/germaniya.jpg" alt="" width="359" height="165" srcset="img/germaniya.jpg 1x, img/germaniya@2x.jpg 2x">
+                    <div class="card-bottom">
+                        <img class="card-bottom-img" src="img/icon/KB.jpg" alt="" width="20" height="20" srcset="img/icon/KB.jpg 1x, img/icon/KB@2x.jpg 2x">
+                        <p class="card-bottom-time">ИА Красная Весна 15:55</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <h4 class="card-heading">Ученые доказали экспериментальным путем пользу покровных культур</h4>
+                    <p class="card-text">Новое исследование ученых университета Иллинойса объединяет полевые данные... </p>
+                    <img class="card-img" src="img/bug'doy.jpg" alt="" width="359" height="165" srcset="img/bug'doy.jpg 1x, img/bug'doy@2x.jpg 2x">
+                    <div class="card-bottom">
+                        <img class="card-bottom-img" src="img/icon/KB.jpg" alt="" width="20" height="20" srcset="img/icon/KB.jpg 1x, img/icon/KB@2x.jpg 2x">
+                        <p class="card-bottom-time">Газета.Ru 12:54</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <h4 class="card-heading">Baidu запустила публичный сервис роботакси Apollo Go в Шанхае</h4>
+                    <p class="card-text">Автопарк Baidu состоит из модифицированных электромобилей EV... </p>
+                    <img class="card-img" src="img/taxi.jpg" alt="" width="359" height="165" srcset="img/taxi.jpg 1x, img/taxi@2x.jpg 2x">
+                    <div class="card-bottom">
+                        <img class="card-bottom-img" src="img/icon/KB.jpg" alt="" width="20" height="20" srcset="img/icon/KB.jpg 1x, img/icon/KB@2x.jpg 2x">
+                        <p class="card-bottom-time">Хайтек+ 13:44</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <h4 class="card-heading">Кандидат на пост канцлера ФРГ Шольц назвал условия коалиционного соглашения</h4>
+                    <p class="card-text">Лидер Социал-демократической партии Германии (СДПГ) и кандидат на должность...</p>
+                    <img class="card-img" src="img/germaniya.jpg" alt="" width="359" height="165" srcset="img/germaniya.jpg 1x, img/germaniya@2x.jpg 2x">
+                    <div class="card-bottom">
+                        <img class="card-bottom-img" src="img/icon/KB.jpg" alt="" width="20" height="20" srcset="img/icon/KB.jpg 1x, img/icon/KB@2x.jpg 2x">
+                        <p class="card-bottom-time">ИА Красная Весна 15:55</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <h4 class="card-heading">Кандидат на пост канцлера ФРГ Шольц назвал условия коалиционного соглашения</h4>
+                    <p class="card-text">Лидер Социал-демократической партии Германии (СДПГ) и кандидат на должность...</p>
+                    <img class="card-img" src="img/germaniya.jpg" alt="" width="359" height="165" srcset="img/germaniya.jpg 1x, img/germaniya@2x.jpg 2x">
+                    <div class="card-bottom">
+                        <img class="card-bottom-img" src="img/icon/KB.jpg" alt="" width="20" height="20" srcset="img/icon/KB.jpg 1x, img/icon/KB@2x.jpg 2x">
+                        <p class="card-bottom-time">ИА Красная Весна 15:55</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <h4 class="card-heading">Кандидат на пост канцлера ФРГ Шольц назвал условия коалиционного соглашения</h4>
+                    <p class="card-text">Лидер Социал-демократической партии Германии (СДПГ) и кандидат на должность...</p>
+                    <img class="card-img" src="img/germaniya.jpg" alt="" width="359" height="165" srcset="img/germaniya.jpg 1x, img/germaniya@2x.jpg 2x">
+                    <div class="card-bottom">
+                        <img class="card-bottom-img" src="img/icon/KB.jpg" alt="" width="20" height="20" srcset="img/icon/KB.jpg 1x, img/icon/KB@2x.jpg 2x">
+                        <p class="card-bottom-time">ИА Красная Весна 15:55</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
 </body>
 </html>
