Add site-header-top without search form

--- a/index.html
+++ b/index.html
@@ -17,17 +17,35 @@
 <body>
     <!-- header top -->
     <header class="site-header">
-        <div class="container">
-            <div class="header-top">
-                <h2 class="header-title">NAMANGANLIKLAR 24</h2>
-                <span class="header-money-one">$ 10137.2</span>
-                <span class="header-money-two">P 138.26</span>
-                <p class="header-poisk">Поиск</p>
-                <div class="header-language">
-                    <p class="language-uz">UZ</p>
-                    <p class="language-ru">RU</p>
+        <div class="site-header-top">
+            <div class="site-header-top-container container">
+                <!-- SITE-HEADER-LOGO -->
+                <a class="site-header-logo" href="#">
+                    <img class="site-hader-logo-img" src="img/logo.svg" alt="N24 logo" width="264" height="28">
+                </a>
+
+                <!-- CURRENCY-RATES -->
+                <ul class="currency-rates">
+                    <li class="currency-rates-item">
+                        <b class="currency-rates-type">$</b>
+                        <span class="currency-rates-value">11570.09</span>
+                    </li>
+                    <li class="currency-rates-item">
+                        <b class="currency-rates-type">P</b>
+                        <span class="currency-rates-value">126.52</span>
+                    </li>
+                </ul>
+
+                <!-- GLOBAL-SEARCH-FORM -->
+
+                <!-- LANG-TOGGLE -->
+                <div class="lang-toggle">
+                    <a class="lang-toggle-link lang-toggle-link-active" href="index.html">UZ</a>
+                    <a class="lang-toggle-link" href="index.html/ru">RU</a>
                 </div>
-                <a class="btn" href="#">Войти</a>
+
+                <!-- SITE-HEADER-AUTH -->
+                <a class="button button-primary" href="#">Войти</a>
             </div>
         </div>
     </header>
@@ -75,13 +93,13 @@
 
     <!-- Main section -->
     <main>
-        <div class="container">
+        <!-- <div class="container">
             <img class="reklama" src="img/reklama1.jpg" alt="reklama rasm" width="1200" height="128"
                 srcset="img/reklama1.jpg 1x, img/reklama1@2x.jpg 2x">
-        </div>
+        </div> -->
 
         <!-- News section -->
-        <section class="body-card">
+        <!-- <section class="body-card">
             <div class="site-container container">
                 <div class="card">
                     <h4 class="card-heading">Кандидат на пост канцлера ФРГ Шольц назвал условия коалиционного соглашения
@@ -157,21 +175,21 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
 
         <!-- Xabarnoma section -->
-        <section>
+        <!-- <section>
             <div class="container">
                 <div class="notification">
                     <h2 class="notification-text">Хотите быть в курсе свежих новостей? Включите уведомления!</h2>
                     <a class="notification-link" href="#">Включит </a>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <!-- В мире -->
-        <section class="news">
+        <!-- <section class="news">
             <div class="container">
                 <h2 class="world">В мире</h2>
                 <div class="news-content">
@@ -254,10 +272,10 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
 
-    <footer>
+    <!-- <footer>
         <div class="site-footer-container container">
             <h2 class="footer-heading">NAMANGANLIKLAR 24</h2>
             <div class="footer-top">
@@ -357,7 +375,7 @@
             </div>
 
         </div>
-    </footer>
+    </footer> -->
 
 </body>
 </html>
