--- a/index.html
+++ b/index.html
@@ -55,51 +55,54 @@
 
 
     <!-- Body -->
-    <nav class="body-nav">
-        <div class="container">
-            <ul class="nav-list">
-                <li class="list-item">
-                    <a class="nav-link" href="#">Главное</a>
+    <div class="container">
+        <nav class="sitenav">
+            <ul class="sitenav-list">
+                <li class="sitenav-item">
+                    <a class="sitenav-link" href="#">Главное</a>
                 </li>
-                <li class="list-item">
-                    <a class="nav-link" href="#">Интересное</a>
+                <li class="sitenav-item">
+                    <a class="sitenav-link" href="#">Интересное</a>
                 </li>
-                <li class="list-item">
-                    <a class="nav-link" href="#">Экономика</a>
+                <li class="sitenav-item">
+                    <a class="sitenav-link" href="#">Экономика</a>
                 </li>
-                <li class="list-item">
-                    <a class="nav-link" href="#">Политика</a>
+                <li class="sitenav-item">
+                    <a class="sitenav-link" href="#">Политика</a>
                 </li>
-                <li class="list-item">
-                    <a class="nav-link" href="#">Общество</a>
+                <li class="sitenav-item">
+                    <a class="sitenav-link" href="#">Общество</a>
                 </li>
-                <li class="list-item">
-                    <a class="nav-link" href="#">Технологии</a>
+                <li class="sitenav-item">
+                    <a class="sitenav-link" href="#">Технологии</a>
                 </li>
-                <li class="list-item">
-                    <a class="nav-link" href="#">Спорт</a>
+                <li class="sitenav-item">
+                    <a class="sitenav-link" href="#">Спорт</a>
                 </li>
-                <li class="list-item">
-                    <a class="nav-link" href="#">Культура</a>
+                <li class="sitenav-item">
+                    <a class="sitenav-link" href="#">Культура</a>
                 </li>
-                <li class="list-item">
-                    <a class="nav-link" href="#">Происшествия</a>
+                <li class="sitenav-item">
+                    <a class="sitenav-link" href="#">Происшествия</a>
                 </li>
-                <li class="list-item">
-                    <a class="nav-link" href="#">Наука</a>
+                <li class="sitenav-item">
+                    <a class="sitenav-link" href="#">Наука</a>
                 </li>
             </ul>
-            <hr>
-        </div>
-    </nav>
+        </nav>
+        <aside class="aside-header-banner">
+            <a class="aside-header-banner-link" href="https://olcha.uz" target="_blank">
+                <img class="aside-header-banner-img" src="img/reklama1.jpg" alt="reklama rasm" width="1200" height="128"
+                srcset="img/reklama1.jpg 1x, img/reklama1@2x.jpg 2x">
+            </a>
+        </aside>
+    </div>
 
+
+    <!-- SITE HEADER BANNER -->
 
     <!-- Main section -->
     <main>
-        <!-- <div class="container">
-            <img class="reklama" src="img/reklama1.jpg" alt="reklama rasm" width="1200" height="128"
-                srcset="img/reklama1.jpg 1x, img/reklama1@2x.jpg 2x">
-        </div> -->
 
         <!-- News section -->
         <!-- <section class="body-card">
