Add bg-img to search input and notifications-cta

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <!-- <h1>Namanganliklar24 - site news</h1> -->
 
             <!-- News section -->
-            <section class="top-news">
+            <div class="top-news">
                 <!-- <h2>Top news</h2> -->
                 <!-- NEWS-GRID -->
                 <div class="news-grid">
@@ -240,14 +240,14 @@
                         </footer>
                     </article>
                 </div>
-            </section>
+            </div>
 
-            <section class="notification-cta">
+            <div class="notification-cta">
                 <div class="notification-cta-text">
                     Хотите быть в курсе свежих новостей? <br> Включите уведомления!
                 </div>
                 <button class="button button-orandge" type="button">Включит</button>
-            </section>
+            </div>
 
             <!-- В мире -->
             <div class="layout-2-1">
@@ -485,7 +485,7 @@
 
                     <li class="site-footer-socials-item">
                         <a class="site-footer-socials-links" href="#" target="_blank">
-                            <img class="site-footer-socials-icon" src="img/icon/icon-telegram.svg" alt=Telegram" width="25" height="25">
+                            <img class="site-footer-socials-icon" src="img/icon/icon-telegram.svg" alt="Telegram" width="25" height="25">
                         </a>
                     </li>
 
