--- a/list.html
+++ b/list.html
@@ -109,7 +109,7 @@
                 <div class="layout-2-1-main">
                     <section class="news">
                         <div class="container">
-                            <h2 class="news-heading">В мире</h2>
+                            <h2 class="news-heading">Интересное</h2>
                             <div class="news-content">
 
                                 <!-- NEWS-LIST -->
@@ -263,7 +263,7 @@
                                         <img class="news-item-img" src="img/cars.jpg" alt="" width="210" height="165"
                                             srcset="img/cars.jpg 1x, img/cars@2x.jpg 2x">
                                         <div class="world-list-content">
-                                            <a class="world-list-content-link" href="#">
+                                            <a class="world-list-content-link" href="articles.html">
                                                 <h2 class="world-list-content-heading">Илон Маск принял участие во Всемирной сетевой конференции в Китае</h2>
                                             </a>
                                             <p class="world-list-content-text">Илон Маск (Elon Musk, Руководитель фирмы Tesla и других проектов) уже второй раз за полторы недели обратился к китайским правящим кругам и гражданам.</p>
