Add contact page and site navigation style

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         <div class="site-header-top">
             <div class="site-header-top-container container">
                 <!-- SITE-HEADER-LOGO -->
-                <a class="site-header-logo" href="#">
+                <a class="site-header-logo" href="index.html">
                     <img class="site-hader-logo-img" src="img/icon/logo.svg" alt="N24 logo" width="264" height="28">
                 </a>
 
