Prefix, minify CSS and custom propertys

--- a/list.html
+++ b/list.html
@@ -11,8 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="css/necolas.github.io_normalize.css_8.0.1_normalize.css">
-    <link rel="stylesheet" href="css/list-style.css">
+    <!-- <link rel="stylesheet" href="css/necolas.github.io_normalize.css_8.0.1_normalize.css"> -->
+    <!-- <link rel="stylesheet" href="css/list-style.css"> -->
+    <link rel="stylesheet" href="css/list-style-min.css">
 </head>
 <body>
     <!-- header top -->
