Add custom properties

--- a/list.html
+++ b/list.html
@@ -399,7 +399,7 @@
 
                     <li class="site-footer-socials-item">
                         <a class="site-footer-socials-links" href="#" target="_blank">
-                            <img class="site-footer-socials-icon" src="img/icon/icon-telegram.svg" alt=Telegram" width="25" height="25">
+                            <img class="site-footer-socials-icon" src="img/icon/icon-telegram.svg" alt="Youtube" width="25" height="25">
                         </a>
                     </li>
 
